<resources>
    <string name="app_name">Storm Flash Info</string>
    <string name="title_activity_category">Category</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="jour1">Lundi</string>
    <string name="jour2">Mardi</string>
    <string name="jour3">Mercredi</string>
    <string name="jour4">Jeudi</string>
    <string name="jour5">Vendredi</string>
    <string name="jour6">Samedi</string>
    <string name="jour7">Dimanche</string>


    <string name="logo_desc">Application logo</string>

    <string name="category1">Bar</string>
    <string name="category2">Restaurant</string>
    <string name="category3">Culture</string>
    <string name="category4">Sport</string>
    <string name="category5">Concert</string>
    <string name="category6">NightClub</string>
    <string name="category7">Cinema</string>


    <string name="note">Note</string>
    <string name="adresse">Adresse</string>
    <string name="telephone">Telephone</string>
    <string name="commentaires">Commentaires</string>
    <string name="lieu">Lieu</string>
    <string name="AjouterLieu">Ajouter Lieu</string>
    <string name="horaires">Horaires</string>
    <string name="objet">Objet</string>
    <string name="description">Description</string>
    <string name="offreLimitée">Offre limitée</string>
    <string name="periode">Période</string>
    <string name="debut">Début</string>
    <string name="fin">Fin</string>
    <string name="annuler">Annuler</string>
    <string name="ajouter">Ajouter</string>
    <string name="codePostal">Code Postal</string>
    <string name="envoyer">Envoyer</string>




</resources>
