<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.abdallah.stormflashinfo.menuActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/app_name">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appbar">

            <Button
                android:id="@+id/button1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/category1"
                android:drawableLeft="@mipmap/ic_bar"
                android:drawableStart="@mipmap/ic_bar"
                android:paddingHorizontal="15dp"
                android:text="@string/category1" />

            <Button
                android:id="@+id/button2"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/category2"
                android:drawableStart="@mipmap/ic_restaurant"
                android:drawableLeft="@mipmap/ic_restaurant"
                android:paddingHorizontal="15dp"
                android:text="@string/category2" />

            <Button
                android:id="@+id/button3"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/category3"
                android:drawableStart="@mipmap/ic_culture"
                android:drawableLeft="@mipmap/ic_culture"
                android:paddingHorizontal="15dp"
                android:text="@string/category3" />

            <Button
                android:id="@+id/button4"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/category4"
                android:drawableStart="@mipmap/ic_sport"
                android:drawableLeft="@mipmap/ic_sport"
                android:paddingHorizontal="15dp"
                android:text="@string/category4" />

            <Button
                android:id="@+id/button5"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/category5"
                android:drawableStart="@mipmap/ic_concert"
                android:drawableLeft="@mipmap/ic_concert"
                android:paddingHorizontal="15dp"
                android:text="@string/category5" />

            <Button
                android:id="@+id/button6"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/category6"
                android:drawableStart="@mipmap/ic_boite"
                android:drawableLeft="@mipmap/ic_boite"
                android:paddingHorizontal="15dp"
                android:text="@string/category6" />

            <Button
                android:id="@+id/button7"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/category7"
                android:drawableStart="@mipmap/ic_cinema"
                android:drawableLeft="@mipmap/ic_cinema"
                android:paddingHorizontal="15dp"
                android:text="@string/category7" />


        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
